# InULearning_V1

./: .gitignore  CORRECTION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DOCKER_INTEGRATION.md  DOCKER_INTEGRATION_SUMMARY.md  DOCKER_QUICK_START.md  GEMINI_INTEGRATION_REPORT.md  PHASE3_INTEGRATION_TEST_REPORT.md  PROJECT_CLEANUP_REPORT.md  QUICK_START.md  README.md  README_DOCKER.md  TESTING_GUIDE.md  WBS_CHECKLIST.md  _start.sh  api_integration_report.json  batch_upload_images.py  check-database-data.py  check.sh  check_frontend_update.html  create-test-data.py  create-test-teacher.py  create_test_data.py  debug_auth.html  demo_students_page.html  docker-compose.yml  env.docker  env.example  final_system_test.py  final_test_report.json  final_test_report.py  gemini_api_ver2.py  init-test-relationships.sql  login_new.html  login_old.html  page_preview.html  pyproject.toml  rebuild_teacher_frontend.sh  requirements.txt  restart.sh  (+30 more)
00_report/: ARCHITECTURE_CORRECTION_REPORT.md  CORRECTION_COMPLETION_REPORT.md
0_requirements_analysis/: 00_project_summary.md  requirements_traceability_matrix.md
2_implementation/: README.md  start_services.sh  stop_services.sh
3_testing/: README.md  TEST_INDEX.md  conftest.py  consolidate_tests.py  fix_import_paths.py  pytest.ini  requirements-test.txt  run_database_integration_tests.sh  run_phase3_2_tests.py  run_tests.py  test_smoke_basic.py  test_system_comprehensive.py
database/: database_design_summary.md  database_migration_learning_system.sql  init-postgres-updated.sql
docs/: DOCKER_INTEGRATION.md  reverse_design_spec.md  (+1 more)
(+508 files in other folders)
