[tool.poetry]
name = "inulearning-v1"
version = "0.1.0"
description = ""
authors = ["bheadwei <bheadwei0910@gmail.com>"]
readme = "README.md"
package-mode = false # 關鍵設定：告訴 Poetry 這是一個應用程式，而非套件

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.7.4"
pydantic-settings = "2.1.0"
sqlalchemy = "2.0.23"
alembic = "1.13.0"
psycopg2-binary = "2.9.9"
pymongo = "^4.9"
redis = "5.0.2"
celery = "5.3.4"
kombu = "5.3.4"
google-generativeai = "0.3.2"
pymilvus = "2.3.4"
minio = "7.2.0"
numpy = "1.24.3"
pandas = "2.0.3"
scikit-learn = "1.3.0"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
httpx = "0.25.2"
aiohttp = "3.9.1"
structlog = "23.2.0"
prometheus-client = "0.21.1"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
playwright = "1.40.0"
black = "23.11.0"
flake8 = "6.1.0"
mypy = "1.7.1"
coverage = "7.3.2"
python-dotenv = "1.0.0"
click = "8.1.7"
rich = "13.7.0"
motor = "^3.7.1"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"